# Linjefollow

./: .gitignore  CMakeLists.txt  DataNet.nn  README.md  Stregedetektor.cpp  camtest.cpp  converttobin.cpp  converttotxt.cpp  main.cpp  matlib.cpp  matx.h  motor.cpp  motor.hpp  motor_virt.cpp  motor_virt.hpp  motortest.cpp  neu.cpp  neu.h  off1.txt  off2.txt  uext  uext.txt  w1.txt  w2.txt
ArUco/: .directory
LearnData2/: data.data
